# vumm-cli

./: .gitignore  .goreleaser.yml  Cargo.toml  LICENSE  Makefile  README.md  cli.go  go.mod  go.sum  sonar-project.properties
.github/workflows/: build.yml  release.yml
cmd/: install.go  login.go  pack.go  permissions.go  publish.go  register.go  root.go  uninstall.go  unpublish.go  update.go
common/: http.go  semver.go  vu.go
examples/: client_get_mod.rs
installer/: dependency.go  dependency_resolver.go  dependency_test.go  installer.go
internal/common/: semver.go  strings.go  version.go
internal/config/: config.go
internal/context/: context.go
internal/middleware/: logger.go  next.go
internal/pipe/: pipe.go
internal/pipe/archiver/: archiver.go
internal/pipe/fetcher/: dependency.go  dependency_test.go  fetcher.go
internal/pipe/installer/: installer.go
internal/pipe/project/: project.go
internal/pipe/publish/: publisher.go
internal/pipeline/: pipeline.go
internal/project/: project.go
internal/registry/: auth.go  constants.go  errors.go  fetch.go  get.go  mod.go  permissions.go  publish.go  request.go  unpublish.go
internal/updater/: periodic.go  updater.go
internal/workspace/: modlist.go
packaging/: vumm.wxs
pkg/api/: auth.go  auth_test.go  client.go  client_test.go  client_transport.go  client_transport_test.go  errors.go  mods.go  mods_permissions.go  mods_permissions_test.go  mods_publish.go  mods_publish_test.go  mods_test.go  permissions.go  publish.go
pkg/api/testdata/: 0.1.0.tgz
pkg/ignorer/: ignore.go
pkg/tar/: packager.go  tar.go
publish/: ignore.go  packager.go  publisher.go
registry/: constants.go  fetch.go  get.go  mod.go
src/: main.rs
tar/: tar.go
vumm_api/: Cargo.toml
vumm_api/src/: lib.rs  mods.rs
vumm_cli/: Cargo.toml
vumm_cli/src/: lib.rs  main.rs
vumm_cli/src/commands/: get_info.rs  mod.rs  talk.rs
vumm_installer/: Cargo.toml
vumm_installer/src/: dependency_resolver.rs  lib.rs  lock.rs
workspace/: config.go  dependency.go  dependency_graph.go  dependency_test.go  mod.go  vu_mod.go  workspace.go
