[package]
name = "vumm_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tar = "0.4.38"
tokio = "1.28.0"
