[package]
name = "vumm_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"]}
vumm_api = { path = "../vumm_api" }
